--- a/SendMe/Views/Account/Register.cshtml
+++ b/SendMe/Views/Account/Register.cshtml
@@ -11,24 +11,41 @@
     <h4>Create a new account.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
+
+    <!--School-->
+    <div class="form-group">
+        @Html.LabelFor(m => m.SchoolId, new {  @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(x => x.SchoolId, new SelectList(ViewBag.Schools, "Value", "Text"))
+            @Html.ValidationMessageFor(m => m.SchoolId)
+        </div>
+    </div>
+
+    <!--Email-->
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
     </div>
+
+    <!--Password-->
     <div class="form-group">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
         </div>
     </div>
+
+    <!--Password Confirm-->
     <div class="form-group">
         @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
+
+    <!--Submit-->
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
