--- a/SendMe/Views/Account/Login.cshtml
+++ b/SendMe/Views/Account/Login.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h2>@ViewBag.Title.</h2>
+<p>@ViewBag.NotConfirmed</p>
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
