--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model SendMe.Models.ApplicationUser
+﻿@model SendMe.Models.StudentViewModel
 
 @{
     ViewBag.Title = "Index";
@@ -9,16 +9,31 @@
         <img class="thumb profile-pic" src="https://www.materialist.com/static/new_store/images/avatar_placeholder.svg" style="max-width: 300px" />
 
         <!-----------HEADER------------->
-        <h1 class="header-h">@Model.UserName.ToUpper()</h1>
+        <h1 class="header-h">@Model.FirstName @Model.LastName</h1>
         <p class="header-p">
-            @if (Model.UserName == User.Identity.Name)
-            {
-                <h4>@Html.ActionLink("Manage Account", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })</h4>
-            }
-            else
-            {
-                <strong>Not logged in.</strong>
-            }
+            @*
+                <h4 id="manageAcct">
+                -------ADD JS TO SHOW MANAGE LINK-----------
+                @Html.ActionLink("Manage Account", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+                </h4>
+            *@
+            @Model.Bio
+        </p>
+        <p>
+            <ul>
+                <li>
+                    @Model.Email
+                </li>
+                <li>
+                    @Model.School
+                </li>
+                <li>
+                    @Model.Year
+                </li>
+                <li>
+                    @Model.Speciality
+                </li>
+            </ul>
         </p>
     </div>
 </div>
