--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -25,7 +25,7 @@
                     @Model.Email
                 </li>
                 <li>
-                    @Model.School
+                    @Model.School.Name
                 </li>
                 <li>
                     @Model.Year
