--- a/SendMe/Views/Shared/_Layout.cshtml
+++ b/SendMe/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
+    <script src="https://js.stripe.com/v3/"></script>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
