--- a/SendMe/Content/Site.css
+++ b/SendMe/Content/Site.css
@@ -23,13 +23,13 @@ textarea {
     max-width: 280px;
 }
 
-{
+/*{
   font-family: "Helvetica Neue", Helvetica;
   font-size: 15px;
   font-variant: normal;
   padding: 0;
   margin: 0;
-}
+}*/
 
 html {
   height: 100%;
