Working on File Uploads

--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -8,7 +8,7 @@
 <!-----------PROFILE PIC------------->
 <div class="row profile-header">
     <div class="col-md-12 text-center marb-35">
-        <img class="thumb profile-pic" src="https://www.materialist.com/static/new_store/images/avatar_placeholder.svg" style="max-width: 300px" />
+        <img class="thumb profile-pic" src="@Model.Upload.FilePath" style="max-width: 300px" />
 
         <!-----------HEADER------------->
         <h1 class="header-h">@Model.Student.FirstName @Model.Student.LastName</h1>
