Added Button to User Index that sends trip id to payment action. Removed Index of Trip(not needed)

--- a/SendMe/Views/Donation/Payment.cshtml
+++ b/SendMe/Views/Donation/Payment.cshtml
@@ -25,14 +25,17 @@
             <div id="card-element" class="field"></div>
         </label>
     </div>
+   
     <button type="submit">Donate</button>
     <div class="outcome">
         <div class="alert alert-danger">
             <strong class="error"></strong>
         </div>
-
     </div>
     <script language="JavaScript" type="text/javascript">
-            var pubKey ='@System.Configuration.ConfigurationManager.AppSettings["PubKey"]';
+        var pubKey = '@System.Configuration.ConfigurationManager.AppSettings["PubKey"]';
+        var tripId = '@(ViewBag.TripId)';
     </script>
 </form>
+
+
