Create profile on registration. Update profile from User Management

--- a/SendMe/Views/School/Manage.cshtml
+++ b/SendMe/Views/School/Manage.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Manage";
 }
 
-<h2>Manage</h2>
+<h2>Manage Your School</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
