--- a/SendMe/Views/Shared/_Upload.cshtml
+++ b/SendMe/Views/Shared/_Upload.cshtml
@@ -53,7 +53,7 @@ else if (ViewBag.Type == "School")
                 @Html.HiddenFor(m => m.ReturnUrl, new { Value = ViewBag.ReturnUrl })
             </p>
             <p>
-                Acceptable file size: 500KB <br />
+                Acceptable file size: 500KB - 1MB <br />
                 Acceptable file types: "jpg", "jpeg", "png" <br/>
                 <strong>For best results, use a landscape oriented image that is at least 50% wider than it is tall.</strong>
 
