--- a/SendMe/Views/Manage/Index.cshtml
+++ b/SendMe/Views/Manage/Index.cshtml
@@ -1,93 +1,163 @@
-﻿@model SendMe.Models.IndexViewModel
+﻿@model Tuple<SendMe.Models.StuProfile, SendMe.Models.IndexViewModel>
+
 @{
-    ViewBag.Title = "Manage";
+    ViewBag.Title = "Manage Profile";
 }
 
 <h2>@ViewBag.Title.</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
-<div>
-    <h4>Change your account settings</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>Password:</dt>
-        <dd>
-            [
-            @if (Model.HasPassword)
+<div class="row">
+    <div class="col-sm-12 col-md-6">
+        <h4>
+            Update Your Profile
+        </h4>
+        <hr />
+
+        @using (Html.BeginForm("UpdateProfile", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
-                @Html.ActionLink("Change your password", "ChangePassword")
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+
+    <!--FirstName-->
+            <div class="form-group">
+                @Html.LabelFor(m => m.Item1.FirstName, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(m => m.Item1.FirstName, new { @class = "form-control" })
+                </div>
+            </div>
+
+    <!--LastName-->
+            <div class="form-group">
+                @Html.LabelFor(m => m.Item1.LastName, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(m => m.Item1.LastName, new { @class = "form-control" })
+                </div>
+            </div>
+
+    <!--Bio-->
+            <div class="form-group">
+                @Html.LabelFor(m => m.Item1.Bio, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextAreaFor(m => m.Item1.Bio, new { @class = "form-control" })
+                </div>
+            </div>
+
+    <!--Specialty-->
+            <div class="form-group">
+                @Html.LabelFor(m => m.Item1.Speciality, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(m => m.Item1.Speciality, new { @class = "form-control", id = "adminKey" })
+                </div>
+                <div id="adminErr"></div>
+            </div>
+
+    <!--Year-->
+            <div class="form-group">
+                @Html.LabelFor(m => m.Item1.Year, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(m => m.Item1.Year, new { @class = "form-control", id = "adminKey" })
+                </div>
+                <div id="adminErr"></div>
+            </div>
+
+    <!--Submit-->
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" class="btn btn-default" value="Manage" />
+                </div>
+            </div>
+        }
+
+
+
+    </div>
+    <div class="col-sm-12 col-md-6">
+        <h4>Change your account settings</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>Password:</dt>
+            <dd>
+                [
+                @if (Model.Item2.HasPassword)
+            {
+                    @Html.ActionLink("Change your password", "ChangePassword")
+                }
+                else
+                {
+                    @Html.ActionLink("Create", "SetPassword")
+                }
+                ]
+            </dd>
+            <dt>Profile Photo:</dt>
+            <dd>
+                @Html.Partial("_Upload", new SendMe.Models.UploadViewModel())
+            </dd>
+
+            @*
+        <dt>External Logins:</dt>
+        <dd>
+            @Model.Item2.Logins.Count [
+            @Html.ActionLink("Manage", "ManageLogins") ]
+        </dd>
+
+            Phone Numbers can used as a second factor of verification in a two-factor authentication system.
+
+             See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
+                for details on setting up this ASP.NET application to support two-factor authentication using SMS.
+
+             Uncomment the following block after you have set up two-factor authentication
+
+        <dt>Phone Number:</dt>
+        <dd>
+            @(Model.Item2.PhoneNumber ?? "None")
+            @if (Model.Item2.PhoneNumber != null)
+            {
+                <br />
+                <text>[&nbsp;&nbsp;@Html.ActionLink("Change", "AddPhoneNumber")&nbsp;&nbsp;]</text>
+                using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <text>[<input type="submit" value="Remove" class="btn-link" />]</text>
+                }
             }
             else
             {
-                @Html.ActionLink("Create", "SetPassword")
+                <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")
             }
-            ]
         </dd>
-        <dt>Profile Photo:</dt>
-        <dd>
-          @Html.Partial("_Upload", new SendMe.Models.UploadViewModel())
-        </dd>
-            
-            @*
-                <dt>External Logins:</dt>
-                <dd>
-                    @Model.Logins.Count [
-                    @Html.ActionLink("Manage", "ManageLogins") ]
-                </dd>
 
-                    Phone Numbers can used as a second factor of verification in a two-factor authentication system.
-
-                     See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                        for details on setting up this ASP.NET application to support two-factor authentication using SMS.
-
-                     Uncomment the following block after you have set up two-factor authentication
-            *@
-            @*
-                <dt>Phone Number:</dt>
-                <dd>
-                    @(Model.PhoneNumber ?? "None")
-                    @if (Model.PhoneNumber != null)
-                    {
-                        <br />
-                        <text>[&nbsp;&nbsp;@Html.ActionLink("Change", "AddPhoneNumber")&nbsp;&nbsp;]</text>
-                        using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                        {
-                            @Html.AntiForgeryToken()
-                            <text>[<input type="submit" value="Remove" class="btn-link" />]</text>
-                        }
-                    }
-                    else
-                    {
-                        <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")
-                    }
-                </dd>
-            *@
-            <dt>Two-Factor Authentication:</dt>
-            <dd>
-                <p>
-                    There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                    for details on setting up this ASP.NET application to support two-factor authentication.
-                </p>
-                @*@if (Model.TwoFactor)
-                    {
-                        using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                        {
-                            @Html.AntiForgeryToken()
-                            <text>Enabled
-                            <input type="submit" value="Disable" class="btn btn-link" />
-                            </text>
-                        }
-                    }
-                    else
-                    {
-                        using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                        {
-                            @Html.AntiForgeryToken()
-                            <text>Disabled
-                            <input type="submit" value="Enable" class="btn btn-link" />
-                            </text>
-                        }
-                    }*@
-            </dd>
+    <dt>Two-Factor Authentication:</dt>
+    <dd>
+        <p>
+            There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
+            for details on setting up this ASP.NET application to support two-factor authentication.
+        </p>
+        @if (Model.Item2.TwoFactor)
+            {
+                using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <text>Enabled
+                    <input type="submit" value="Disable" class="btn btn-link" />
+                    </text>
+                }
+            }
+            else
+            {
+                using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <text>Disabled
+                    <input type="submit" value="Enable" class="btn btn-link" />
+                    </text>
+                }
+            }
+    </dd>*@
         </dl>
     </div>
+</div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
