fixed an issue with payment.

--- a/SendMe/Views/Donation/Payment.cshtml
+++ b/SendMe/Views/Donation/Payment.cshtml
@@ -34,7 +34,7 @@
     </div>
     <script language="JavaScript" type="text/javascript">
         var pubKey = '@System.Configuration.ConfigurationManager.AppSettings["PubKey"]';
-        var tripId = '@(ViewBag.TripId)';
+        var tripId = '@ViewBag.TripId';
     </script>
 </form>
 
